tests/ui/errors/snapshots/lex_double_quote_escape_in_char.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid escape sequence
   ╭─[test.lis:1:10]
 1 │ let x = '\"'
   ·          ─┬
   ·           ╰── `\"` is not a valid escape
   ╰────
  help: Valid escapes are `\a`, `\b`, `\f`, `\n`, `\r`, `\t`, `\v`, `\\`, `\'`, `\xHH` (hex), `\ooo` (octal), and `\u{HEX}` or `\UHHHHHHHH` (unicode) · code: [lex.invalid_escape_sequence]
