tests/ui/errors/snapshots/lex_format_string_escaped_quotes_in_interpolation.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Escaped quote in f-string interpolation
   ╭─[test.lis:1:20]
 1 │ let s = f"x: {func(\"arg\")}"
   ·                    ─┬
   ·                     ╰── unneeded
   ╰────
  help: Use bare quotes inside f-string interpolations: `f"x: {func("arg")}"` · code: [lex.escaped_quote_in_interpolation]
