tests/ui/errors/snapshots/lex_format_string_unclosed_brace.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Unclosed `{` in format string
   ╭─[test.lis:1:17]
 1 │ let x = f"hello {name"
   ·                 ┬
   ·                 ╰── unclosed brace
   ╰────
  help: Add a closing `}` or escape it with `{{` · code: [lex.format_string_unclosed_brace]
