tests/ui/errors/snapshots/lex_format_string_unclosed_brace_at_newline.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Multi-line f-string interpolation
   ╭─[test.lis:1:17]
 1 │ let s = f"hello {name
   ·                 ┬
   ·                 ╰── f-string interpolations must be single-line
 2 │ let x = 1
   ╰────
  help: Extract the expression into a `let` binding and interpolate the variable · code: [lex.format_string_multiline_interpolation]
