tests/ui/errors/snapshots/lex_format_string_unmatched_brace.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Unmatched `}` in format string
   ╭─[test.lis:1:17]
 1 │ let x = f"hello }name}"
   ·                 ┬
   ·                 ╰── unmatched closing brace
   ╰────
  help: Remove `}` or escape it with `}}` · code: [lex.format_string_unmatched_brace]
